@@ -57,6 +57,7 @@ importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_linerange)
 importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,geom_tile)
 importFrom(ggplot2,geom_vline)
@@ -77,9 +78,12 @@ importFrom(graphics,barplot)
 importFrom(graphics,hist)
 importFrom(graphics,points)
 importFrom(graphics,text)
+importFrom(grid,gpar)
 importFrom(grid,grid.layout)
 importFrom(grid,grid.newpage)
+importFrom(grid,grid.text)
 importFrom(grid,pushViewport)
+importFrom(grid,unit)
 importFrom(grid,viewport)
 importFrom(igraph,"E<-")
 importFrom(igraph,"V<-")
